--- a/src/main/resources/templates/helloworld/message.html
+++ b/src/main/resources/templates/helloworld/message.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
   <head>
-    <title>{{ title }}</title>
+    <title>{{ pageTitle }}</title>
     <link rel="stylesheet" href="/site.css">
   </head>
   <body>
     <h1>Houston, we have a message!</h1>
     <p>
       <b>Message:</b>
-      {{ message }}
+      {{ thisIsWhatIShouldShow }}
     </p>
     {{> helloworld/message-form }}
     {{> helloworld/adder-form }}
