--- a/src/main/resources/templates/helloworld/message-form.html
+++ b/src/main/resources/templates/helloworld/message-form.html
@@ -1,5 +1,5 @@
 <h2>Send a Message</h2>
-<form method="get" action="./message-path">
+<form method="get" action="/HelloWorld/message-path">
   <input type="text" name="submittedMessage" placeholder="say nothing...">
   <button>Send the message</button>
 </form> 
