--- a/src/main/resources/templates/helloworld/message.html
+++ b/src/main/resources/templates/helloworld/message.html
@@ -10,7 +10,7 @@
       <b>Message:</b>
       {{ thisIsWhatIShouldShow }}
     </p>
-    {{> helloworld/message-form }}
+    {{> helloworld/yeller-form }}
     {{> helloworld/adder-form }}
   </body>
 </html>
